tests/fixtures/invalid/set_rshift_none.py
# Cannot right shift Set[int] and None
x: set[int] = {1, 2, 3} >> None
